# feature_engineering

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
featurewiz_pro/: __init__.py  core.py  pipeline.py
tests/: test_featurewiz_pro.py
