[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featurewiz-pro"
version = "0.1.0"
description = "A comprehensive 7-phase feature engineering toolkit for tabular data (regression & classification)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Fares Ashraf", email = "farsashraf44@gmail.com" }
]
keywords = [
    "feature engineering",
    "machine learning",
    "data science",
    "EDA",
    "feature selection",
    "pandas",
    "scikit-learn",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# pip install featurewiz-pro[full]  — installs every optional dependency
full = [
    "missingno>=0.5",
    "category_encoders>=2.6",
    "pygam>=0.9",
    "shap>=0.44",
    "lightgbm>=4.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage      = "https://github.com/fares3010/feature_engineering"
Documentation = "https://github.com/fares3010/feature_engineering#readme"
Repository    = "https://github.com/fares3010/feature_engineering"
Issues        = "https://github.com/fares3010/feature_engineering/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["featurewiz_pro*"]

[tool.setuptools.package-data]
"featurewiz_pro" = ["py.typed"]

# ── Ruff linting ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# ── Black formatting ──────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
